# ITT2

./: README.md  instruments.md  pyproject.toml  setup.md
IoT/: itt_not_smoothed.ino  itt_smoothed_data.ino
Mikulas/: test.ipynb
Mikulas/Max patches/: CC_input.maxpat  CC_input_camera.maxpat  CC_input_sensors.maxpat  ease_out_expo.maxpat  one_minus_x.maxpat
docs/: windows-setup.md
kuba/: camera.py  cv.py
matej/: .README.md.un~  README.md  README.md~  controller_mapping.py  hello_rtmidi.py  itt_audio_controller.amxd  serial_read.py  volume_logic.maxpat
portrait/: app.py  camera.sh  camera_object.py  camera_scene.py  create-markerks.py  detect_markers.py  diagram.excalidraw  main.py  midi_map.py  object.py  object_registry.py  scene.py  util.py
portrait/camera_object/: camera_object.py  camera_scene.py  entity.py  manager.py  registry.py
portrait/dashboard/: frontend.py  stream.py
portrait/instrument/: abstract_instrument.py  count_instrument.py  instruments.py  instruments_manager.py  manager.py  presence_instrument.py  proximity_instrument.py  ratio_instrument.py  registry.py
portrait/instrument/instruments/: count_instrument.py  distance_sensor_instrument.py  presence_instrument.py  proximity_instrument.py  ratio_instrument.py
portrait/midi/: mapper.py  midi.py
portrait/rerun_dashboard/: blueprint.py  rerun_visualization.py
portrait/scripts/: detect_markers.py
portrait/sensors/: entity.py  manager.py  registry.py  serial_debugger.py  serial_simulator.py
