[tool.poetry]
name = "itt2"
version = "0.1.0"
description = ""
authors = ["Jakub <kuba.zika@email.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-build = "^0.16.7"
cmake = "^3.25.2"
opencv-python = "^4.7.0"
ipykernel = "^6.21.2"
numpy = "^1.24.2"
Pillow = "^9.4.0"
jurigged = "^0.5.5"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
imutils = "^0.5.4"
opencv-contrib-python = "4.6.0.66"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
